<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <PreferenceCategory app:title="@string/common_setting_header" app:iconSpaceReserved="false">

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/ui_entries"
            app:entryValues="@array/ui_values"
            app:key="uiKey"
            app:title="@string/ui_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="0"
            app:entries="@array/location_entries"
            app:entryValues="@array/location_values"
            app:key="locationKey"
            app:title="@string/location_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="3"
            app:entries="@array/num_grid_entries"
            app:entryValues="@array/num_grid_values"
            app:key="numGridKey"
            app:title="@string/grid_title"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/private_header"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="lockPrivateKey"
            app:title="@string/lock_private_title"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/other_header"
        app:iconSpaceReserved="false">

        <SwitchPreferenceCompat
            app:defaultValue="true"
            app:key="lockTrashKey"
            app:title="@string/trash_title"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

</PreferenceScreen>