<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/change_pass_menu_item"
        android:enabled="true"
        android:title="@string/change_pass"
        android:tooltipText=""/>
    <item
        android:id="@+id/remove_pass_menu_item"
        android:enabled="true"
        android:title="@string/remove_pass"
        android:tooltipText=""/>
    <item
        android:id="@+id/forget_pass_menu_item"
        android:enabled="true"
        android:title="@string/forget_pass"
        android:tooltipText=""/>
    <item
        android:id="@+id/setting_menu_item"
        android:enabled="true"
        android:title="@string/setting"
        android:tooltipText=""/>

</menu>