<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MediaDetails"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar_media_details"
        layout="@layout/layout_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/taken_datetime"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/media_taken_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="02 tháng 6, 2023 21:12"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_name"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/media_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_file_name"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_size"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/media_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_file_size"
            android:layout_margin="10dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resolution"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/media_resolution"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_resolution"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/file_path"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/media_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_file_path"
            android:layout_margin="10dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_margin="10dp"/>
    </LinearLayout>


</LinearLayout>