<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/add_album_tb_item"
        android:enabled="true"
        android:icon="@drawable/ic_add_library"
        android:title="@string/add_album"
        app:showAsAction="always"
        android:tooltipText="@string/add_album"/>
    <item
        android:id="@+id/search_tb_item"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        android:tooltipText="@string/search"/>

    <item
        android:id="@+id/multiselect_menu_item"
        android:enabled="true"
        android:title="@string/multiselect"
        android:tooltipText=""/>
    <item
        android:id="@+id/setting_menu_item"
        android:enabled="true"
        android:title="@string/setting"
        android:tooltipText=""/>

</menu>