<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/take_photo_tb_item"
        android:enabled="true"
        android:icon="@drawable/ic_camera"
        android:title=""
        app:showAsAction="always"
        android:tooltipText="@string/camera"/>
    <item
        android:id="@+id/search_tb_item"
        android:enabled="true"
        android:icon="@drawable/ic_search"
        android:title=""
        app:showAsAction="ifRoom|collapseActionView"
        android:tooltipText="@string/share"/>
    <item
        android:id="@+id/more_tb_item"
        android:enabled="true"
        android:icon="@drawable/ic_more_vertical"
        android:title=""
        android:tooltipText="@string/delete"/>

</menu>