<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/primary_color_dark"
    android:orientation="horizontal"
    app:behavior_hideable="true"
    android:paddingBottom="20dp"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    android:paddingTop="10dp"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">

        <TextView
            android:layout_weight="0.25"
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:paddingEnd="10dp"
            android:text="@string/share"
            android:textSize="11sp"
            android:textAlignment="center"
            app:drawableTopCompat="@drawable/ic_share"
            android:foreground="?android:attr/selectableItemBackground"/>


        <TextView
            android:layout_weight="0.25"
            android:id="@+id/create_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:paddingEnd="10dp"
            android:text="@string/creative"
            android:textSize="11sp"
            android:textAlignment="center"
            app:drawableTopCompat="@drawable/ic_creative"
            android:foreground="?android:attr/selectableItemBackground"/>


        <TextView
            android:layout_weight="0.25"
            android:id="@+id/move_album_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:paddingEnd="10dp"
            android:text="@string/move"
            android:textSize="11sp"
            android:textAlignment="center"
            app:drawableTopCompat="@drawable/ic_move"
            android:foreground="?android:attr/selectableItemBackground"/>

        <TextView
            android:layout_weight="0.25"
            android:id="@+id/copy_album_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:minHeight="48dp"
            android:paddingStart="5dp"
            android:paddingEnd="10dp"
            android:text="@string/copy"
            android:textSize="11sp"
            android:textAlignment="center"
            app:drawableTopCompat="@drawable/ic_copy"
            android:foreground="?android:attr/selectableItemBackground"/>

        <TextView
            android:layout_weight="0.25"
            android:id="@+id/delete_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:text="@string/delete"
            android:textSize="11sp"
            android:paddingStart="5dp"
            android:paddingEnd="10dp"
            android:textAlignment="center"
            app:drawableTopCompat="@drawable/ic_delete"
            android:foreground="?android:attr/selectableItemBackground"/>
</LinearLayout>