<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="2dp"
    android:checkable="false"
    app:checkedIconGravity="TOP_START"
    app:checkedIconTint="@color/white"
    android:id="@+id/media_card"
    style="@style/PhotoCardView"
    android:elevation="0dp">
    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_gravity="start|center_vertical">
        <ImageView
            android:id="@+id/photoItem"
            style="@style/PhotoCardImageView"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:clickable="true"
            android:contentDescription="@string/photo_item"
            android:focusable="true"
            android:scaleType="centerCrop"
            tools:srcCompat="@tools:sample/avatars"/>


        <ImageView
            android:id="@+id/play_video_button_child"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_play"
            android:visibility="invisible"
            android:contentDescription="play icon" />

        <ImageView
            android:id="@+id/fav_icon"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="bottom|end"
            android:src="@drawable/ic_fav_solid"
            android:visibility="gone"
            app:tint="@color/red" />

        <View
            android:id="@+id/blur_view"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@color/check_color"
            android:visibility="gone"/>
    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="vertical"
        android:layout_marginVertical="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="140dp">
        <TextView
            android:id="@+id/media_name"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:text="@string/photo"
            style="@style/TextDetails"
            android:textSize="18sp"
            android:autoSizeMinTextSize="11sp"
            android:autoSizeMaxTextSize="22sp"
            android:autoSizeTextType="uniform"/>
        <TextView
            android:id="@+id/media_taken_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/taken_datetime"
            android:minLines="1"/>
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>

